# practice-mpi

./: .gitignore  CMakeLists.txt  busqueda.cpp  escala-grises.cpp  main.cpp  matrices-mult-no.cpp  matrices-mult.cpp  testeo.cpp
cuda/: CMakeLists.txt  kernel.cu  main.cpp
mpi/: CMakeLists.txt  escala-grises-no.cpp  main.cpp  matrices-mult.cpp
